<resources>
    <string name="app_name">ChatApp</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget password?</string>
    <string name="or_create_my_account">Or Create My Account</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="chat">Chat App</string>
    <string name="room_chat">Room Chat</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_name">Room Name</string>
    <string name="room_description">Room Description</string>
    <string name="sports">Sport</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>

    <array name="room_categories">
        <item>Sports</item>
        <item>Movies</item>
        <item>Music</item>
    </array>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>