<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context=".ui.login.LoginActivity"
    >

    <data>
        <variable
            name="vm"
            type="com.example.chatapp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:padding="16dp"
        >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/guideLine">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:paddingVertical="15dp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                errorText="@{vm.emailError}"
                >
                <EditText
                    android:id="@+id/edit_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:text="@={vm.email}"
                    android:inputType="textEmailAddress"
                    android:background="@color/trans"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                errorText="@{vm.passwordError}"
                >
                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={vm.password}"
                    android:inputType="textPassword"
                    android:background="@color/trans"
                    />
            </com.google.android.material.textfield.TextInputLayout>
<!--            <TextView-->
<!--                android:id="@+id/text_forget_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/forget_password"-->
<!--                android:layout_marginVertical="10dp"-->
<!--                android:textSize="16sp"-->
<!--                android:textColor="@color/gray"-->
<!--                />-->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_login"
               android:layout_marginVertical="20dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="20dp"
                android:gravity="start"
                android:backgroundTint="@color/blue"
                android:onClick="@{() -> vm.login()}"
                android:text="@string/login"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/text_create_my_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_create_my_account"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:onClick="@{()-> vm.goToRegister()}"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>