<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context=".ui.register.RegisterActivity"
    >

    <data>
        <variable
            name="vm"
            type="com.example.chatapp.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:padding="16dp"
        >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/guideLine">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                errorText="@{vm.userNameError}"
                >
                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:text="@={vm.userName}"
                    android:background="@color/trans"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                errorText="@{vm.emailError}"
                >
                <EditText
                    android:id="@+id/edit_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:text="@={vm.email}"
                    android:inputType="textEmailAddress"
                    android:background="@color/trans"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                errorText="@{vm.passwordError}"
                >
                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={vm.password}"
                    android:inputType="textPassword"
                    android:background="@color/trans"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                errorText="@{vm.passwordConformError}"
                >
                <EditText
                    android:id="@+id/edit_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:text="@={vm.passwordConform}"
                    android:inputType="textPassword"
                    android:background="@color/trans"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="20dp"
                android:gravity="start"
                android:shadowColor="@color/white"
                android:backgroundTint="@color/trans"
                android:onClick="@{() -> vm.register()}"
                android:text="@string/create_account"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>