<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_room"
    tools:context=".ui.addRoom.AddRoomActivity"
    >

    <data>
        <variable
            name="vm"
            type="com.example.chatapp.ui.addRoom.AddRoomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:paddingHorizontal="10dp"
        android:paddingVertical="40dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginVertical="18dp"
                    android:text="@string/create_new_room"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginHorizontal="75dp"
                    android:src="@drawable/room"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_marginHorizontal="30dp"
                    android:paddingVertical="8dp"
                    errorText="@{vm.roomNameError}"
                    >
                    <EditText
                        android:id="@+id/edit_room_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/room_name"
                        android:text="@={vm.roomName}"
                        android:inputType="text"
                        android:background="@color/trans"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="30dp"
                    >
                </Spinner>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_desc_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_marginHorizontal="30dp"
                    android:paddingVertical="8dp"
                    errorText="@{vm.roomDescriptionError}"
                    >
                    <EditText
                        android:id="@+id/edit_room_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/room_description"
                        android:text="@={vm.roomDescription}"
                        android:inputType="text"
                        android:background="@color/trans"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="30dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="50dp"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blue"
                        android:onClick="@{() -> vm.createRoom()}"
                        android:text="Create"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>